// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should render 1`] = `
<div>
  <form
    class="flex gap-x-3"
    novalidate=""
  >
    <div
      class="required field"
    >
      <label
        for=":r0:-name"
      >
        Name
      </label>
      <input
        id=":r0:-name"
        maxlength="48"
        name="name"
        placeholder="Ex. Tomato"
        required=""
        size="32"
        type="text"
      />
    </div>
    <div
      class="required field"
    >
      <label
        for=":r0:-minPH"
      >
        Minimum PH
      </label>
      <input
        id=":r0:-minPH"
        max="14"
        min="0"
        name="minPH"
        placeholder="Ex. 7.0"
        required=""
        size="10"
        step=".1"
        type="number"
      />
    </div>
    <div
      class="required field"
    >
      <label
        for=":r0:-maxPH"
      >
        Maximum PH
      </label>
      <input
        id=":r0:-maxPH"
        max="14"
        min="0"
        name="maxPH"
        placeholder="Ex. 7.0"
        required=""
        size="10"
        step=".1"
        type="number"
      />
    </div>
    <div
      class="flex items-center gap-x-2"
    >
      <button
        class="emerald"
        type="submit"
      >
        Submit
      </button>
      <button
        class="slate"
        type="button"
      >
        Clear
      </button>
    </div>
  </form>
</div>
`;

exports[`when invalid and submit is clicked > should report validation errors 1`] = `
<div>
  <form
    class="flex gap-x-3"
    novalidate=""
  >
    <div
      class="required field"
    >
      <label
        for=":r1:-name"
      >
        Name
      </label>
      <input
        id=":r1:-name"
        maxlength="48"
        name="name"
        placeholder="Ex. Tomato"
        required=""
        size="32"
        type="text"
      />
      <div
        class="error text-rose-800"
      >
        Name is required
      </div>
    </div>
    <div
      class="required field"
    >
      <label
        for=":r1:-minPH"
      >
        Minimum PH
      </label>
      <input
        id=":r1:-minPH"
        max="14"
        min="0"
        name="minPH"
        placeholder="Ex. 7.0"
        required=""
        size="10"
        step=".1"
        type="number"
      />
    </div>
    <div
      class="required field"
    >
      <label
        for=":r1:-maxPH"
      >
        Maximum PH
      </label>
      <input
        id=":r1:-maxPH"
        max="14"
        min="0"
        name="maxPH"
        placeholder="Ex. 7.0"
        required=""
        size="10"
        step=".1"
        type="number"
      />
    </div>
    <div
      class="flex items-center gap-x-2"
    >
      <button
        class="emerald"
        type="submit"
      >
        Submit
      </button>
      <button
        class="slate"
        type="button"
      >
        Clear
      </button>
    </div>
  </form>
</div>
`;

exports[`when valid and submit is clicked > should submit data 1`] = `
<div>
  <form
    class="flex gap-x-3"
    novalidate=""
  >
    <div
      class="required field"
    >
      <label
        for=":r2:-name"
      >
        Name
      </label>
      <input
        id=":r2:-name"
        maxlength="48"
        name="name"
        placeholder="Ex. Tomato"
        required=""
        size="32"
        type="text"
      />
    </div>
    <div
      class="required field"
    >
      <label
        for=":r2:-minPH"
      >
        Minimum PH
      </label>
      <input
        id=":r2:-minPH"
        max="14"
        min="0"
        name="minPH"
        placeholder="Ex. 7.0"
        required=""
        size="10"
        step=".1"
        type="number"
      />
    </div>
    <div
      class="required field"
    >
      <label
        for=":r2:-maxPH"
      >
        Maximum PH
      </label>
      <input
        id=":r2:-maxPH"
        max="14"
        min="0"
        name="maxPH"
        placeholder="Ex. 7.0"
        required=""
        size="10"
        step=".1"
        type="number"
      />
    </div>
    <div
      class="flex items-center gap-x-2"
    >
      <button
        class="emerald"
        type="submit"
      >
        Submit
      </button>
      <button
        class="slate"
        type="button"
      >
        Clear
      </button>
    </div>
  </form>
</div>
`;
